3.3.4/_sources/gallery/subplots_axes_and_figures/demo_tight_layout.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/subplots_axes_and_figures/demo_tight_layout.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_subplots_axes_and_figures_demo_tight_layout.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_subplots_axes_and_figures_demo_tight_layout.py:


===============================
Resizing axes with tight layout
===============================

`~.figure.Figure.tight_layout` attempts to resize subplots in
a figure so that there are no overlaps between axes objects and labels
on the axes.

See :doc:`/tutorials/intermediate/tight_layout_guide` for more details and
:doc:`/tutorials/intermediate/constrainedlayout_guide` for an alternative.

.. GENERATED FROM PYTHON SOURCE LINES 14-30

.. code-block:: default


    import matplotlib.pyplot as plt
    import itertools
    import warnings


    fontsizes = itertools.cycle([8, 16, 24, 32])


    def example_plot(ax):
        ax.plot([1, 2])
        ax.set_xlabel('x-label', fontsize=next(fontsizes))
        ax.set_ylabel('y-label', fontsize=next(fontsizes))
        ax.set_title('Title', fontsize=next(fontsizes))









.. GENERATED FROM PYTHON SOURCE LINES 31-36

.. code-block:: default


    fig, ax = plt.subplots()
    example_plot(ax)
    plt.tight_layout()




.. image:: /gallery/subplots_axes_and_figures/images/sphx_glr_demo_tight_layout_001.png
    :alt: Title
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 37-45

.. code-block:: default


    fig, ((ax1, ax2), (ax3, ax4)) = plt.subplots(nrows=2, ncols=2)
    example_plot(ax1)
    example_plot(ax2)
    example_plot(ax3)
    example_plot(ax4)
    plt.tight_layout()




.. image:: /gallery/subplots_axes_and_figures/images/sphx_glr_demo_tight_layout_002.png
    :alt: Title, Title, Title, Title
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 46-52

.. code-block:: default


    fig, (ax1, ax2) = plt.subplots(nrows=2, ncols=1)
    example_plot(ax1)
    example_plot(ax2)
    plt.tight_layout()




.. image:: /gallery/subplots_axes_and_figures/images/sphx_glr_demo_tight_layout_003.png
    :alt: Title, Title
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 53-59

.. code-block:: default


    fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2)
    example_plot(ax1)
    example_plot(ax2)
    plt.tight_layout()




.. image:: /gallery/subplots_axes_and_figures/images/sphx_glr_demo_tight_layout_004.png
    :alt: Title, Title
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 60-66

.. code-block:: default


    fig, axs = plt.subplots(nrows=3, ncols=3)
    for ax in axs.flat:
        example_plot(ax)
    plt.tight_layout()




.. image:: /gallery/subplots_axes_and_figures/images/sphx_glr_demo_tight_layout_005.png
    :alt: Title, Title, Title, Title, Title, Title, Title, Title, Title
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 67-80

.. code-block:: default


    fig = plt.figure()

    ax1 = plt.subplot(221)
    ax2 = plt.subplot(223)
    ax3 = plt.subplot(122)

    example_plot(ax1)
    example_plot(ax2)
    example_plot(ax3)

    plt.tight_layout()




.. image:: /gallery/subplots_axes_and_figures/images/sphx_glr_demo_tight_layout_006.png
    :alt: Title, Title, Title
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 81-98

.. code-block:: default


    fig = plt.figure()

    ax1 = plt.subplot2grid((3, 3), (0, 0))
    ax2 = plt.subplot2grid((3, 3), (0, 1), colspan=2)
    ax3 = plt.subplot2grid((3, 3), (1, 0), colspan=2, rowspan=2)
    ax4 = plt.subplot2grid((3, 3), (1, 2), rowspan=2)

    example_plot(ax1)
    example_plot(ax2)
    example_plot(ax3)
    example_plot(ax4)

    plt.tight_layout()

    plt.show()




.. image:: /gallery/subplots_axes_and_figures/images/sphx_glr_demo_tight_layout_007.png
    :alt: Title, Title, Title, Title
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 99-136

.. code-block:: default


    fig = plt.figure()

    gs1 = fig.add_gridspec(3, 1)
    ax1 = fig.add_subplot(gs1[0])
    ax2 = fig.add_subplot(gs1[1])
    ax3 = fig.add_subplot(gs1[2])

    example_plot(ax1)
    example_plot(ax2)
    example_plot(ax3)

    gs1.tight_layout(fig, rect=[None, None, 0.45, None])

    gs2 = fig.add_gridspec(2, 1)
    ax4 = fig.add_subplot(gs2[0])
    ax5 = fig.add_subplot(gs2[1])

    example_plot(ax4)
    example_plot(ax5)

    with warnings.catch_warnings():
        # gs2.tight_layout cannot handle the subplots from the first gridspec
        # (gs1), so it will raise a warning. We are going to match the gridspecs
        # manually so we can filter the warning away.
        warnings.simplefilter("ignore", UserWarning)
        gs2.tight_layout(fig, rect=[0.45, None, None, None])

    # now match the top and bottom of two gridspecs.
    top = min(gs1.top, gs2.top)
    bottom = max(gs1.bottom, gs2.bottom)

    gs1.update(top=top, bottom=bottom)
    gs2.update(top=top, bottom=bottom)

    plt.show()




.. image:: /gallery/subplots_axes_and_figures/images/sphx_glr_demo_tight_layout_008.png
    :alt: Title, Title, Title, Title, Title
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 137-143

------------

References
""""""""""

The use of the following functions and methods is shown in this example:

.. GENERATED FROM PYTHON SOURCE LINES 144-151

.. code-block:: default


    import matplotlib
    matplotlib.pyplot.tight_layout
    matplotlib.figure.Figure.tight_layout
    matplotlib.figure.Figure.add_gridspec
    matplotlib.figure.Figure.add_subplot
    matplotlib.pyplot.subplot2grid




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <function subplot2grid at 0x7fcc1635a790>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  4.060 seconds)


.. _sphx_glr_download_gallery_subplots_axes_and_figures_demo_tight_layout.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: demo_tight_layout.py <demo_tight_layout.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: demo_tight_layout.ipynb <demo_tight_layout.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
